fix: 예매 목록 정렬을 고정하고 없는 좌석과 다른 회차 좌석을 구분
Map.copyOf는 반복 순서를 보장하지 않고 JDK가 JVM 실행마다 섞는다. LinkedHashMap으로
순서를 만들어 두고 그것으로 감싸 무의미해져 있었고, 실제로 실행마다 목록 순서가
달라졌다. 스펙은 "최신순"이므로 unmodifiableMap으로 바꾸는 데 그치지 않고 id 내림차순
정렬을 명시한다. createdAt이 아직 없어 공통규약의 기본 정렬 중 보조 키만 적용한다.

좌석 검증이 "존재하지 않는 좌석"과 "다른 회차의 좌석"을 하나로 합쳐 둘 다 400을 냈다.
스펙은 전자를 404, 후자를 400으로 나눈다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01N21YxtjqFYGijoUGVZniis